Fix collapsed sidebar toggle

--- a/src/css/ui/components/sidebar.css
+++ b/src/css/ui/components/sidebar.css
@@ -195,8 +195,7 @@
 }
 
 .sidebar .sidebar-footer {
-  align-self: flex-end;
-  margin-bottom: 1.5rem;
+  padding: 1.5rem 0;
   display: flex;
   justify-content: center;
 }
